maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:18: error: not found: value BiscuitX
		setIndication(BiscuitX, BiscuitY, 0)
                              ^JediEscaper:59: error: type mismatch;
 found   : Int
 required: Boolean
					if(getIndication(i,j))
                                                        ^